--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+body{
+    
+    background-position: center;
+    background-repeat:no-repeat;
+    background-size:cover;
+
+}
+footer{
+    text-align: center;
+}
+#todo-list{
+    width:200px;
+    
+}
 .hidden{
     display:none;
+}
+.background_image{
+    position:absoulte;
+    width:100vw;
+    height:100vh;
+    z-index: -1;
 }
